# homeauto

./: .gitignore  .pre-commit-config.yaml  Brewfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-image.yaml  publish-wheel.yaml  push-image.yaml  terraform-apply.yaml  terraform-plan.yaml  test-code.yaml  upload-wheel.yaml  validate-code.yaml
airflow/: README.md  entrypoint.sh  pyproject.toml
airflow/core/: utils.py
airflow/core/api/authentication/: api_key.py  basic.py
airflow/core/api/client/: __init__.py  steam.py
airflow/core/api/response_model/steam/: player_achievements.py
airflow/core/dataset/: __init__.py
airflow/core/dataset/bronze/: __init__.py  steam.py
airflow/core/dataset/gold/: __init__.py  steam.py
airflow/core/dataset/silver/: __init__.py  steam.py
airflow/core/endpoint/: steam.py
airflow/dags/steam/: dag.py  task.py
airflow/scripts/extract/: __init__.py
airflow/scripts/extract/steam/: __init__.py  owned_games.py  player_achievements.py
airflow/scripts/load/: __init__.py
airflow/scripts/load/steam/: dim_owned_games.py  fact_owned_games_tags.py
airflow/scripts/transform/: __init__.py
airflow/scripts/transform/steam/: owned_games.py
ansible/: Makefile  inventory.ini
ansible/inventories/: hosts
ansible/playbooks/: airflow.yml  bootstrap.yml  docker.yml  grafana.yml  home-assistant.yml  microk8s.yaml  portainer.yml  postgres.yml  pypi-server.yml  wireguard.yml
bootstrap/: main.sh
bootstrap/modules/: af_az-sp.sh  af_gh-secrets.sh  (+9 more)
config/: .env.shared
docker/: Makefile
scripts/: make_index.py
terraform/: Makefile  main.tf  outputs.tf  providers.tf  tf-outputs.json  variables.tf
vars/: .env.prd
(+203 files in other folders)
