[project]
name = "homeauto"
version = "0.1.0"
description = "A home automation system"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "azure-identity==1.25.1",
    "azure-keyvault-secrets==4.10.0",
    "howlongtobeatpy>=1.0.18",
    "pandera[polars]==0.26.1",
    "polars==1.34.0",
    "pydantic==2.12.3",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "apache-airflow==3.1.0",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "ruff>=0.14.6",
]
workflow = [
    "pre-commit==4.3.0",
    "pytest==8.4.2",
]

[build-system]
requires = ["uv_build==0.9.3"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C90", "B", "B9", "I", "Q"]

[tool.mypy]
ignore_missing_imports = true

[[tool.uv.index]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/75607343/packages/pypi/"
publish-url = "https://gitlab.com/api/v4/projects/75607343/packages/pypi/"
explicit = true
