[project]
name = "airflow"
version = "0.1.0"
description = "Apache Airflow workflows for data processing with Azure Key Vault integration."
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "azure-identity==1.25.0",
    "azure-keyvault-secrets==4.10.0",
    "pandera[polars]==0.26.1",
    "polars==1.33.1",
    "pydantic==2.11.9",
]

[dependency-groups]
dev = [
    "apache-airflow==3.0.6",
    "pandas==2.3.2",
    "pyarrow==21.0.0",
    "pytest==8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "scripts",
]
